--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "@types/notp": "^2.0.0",
     "notp": "^2.0.3",
     "thirty-two": "1.0.2",
-    "tslib": "^2.1.0"
+    "tslib": "^2.1.0",
+    "qrcode": "^1.5.3"
   },
   "devDependencies": {
     "@types/jest": "^26.0.20",
